tests/core/snapshots/apollo-tracing.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream {
  query: Query
}

type Query {
  hello: String! @http(url: "http://api.com/")
}
