tests/core/snapshots/auth-basic.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Mutation {
  protectedType: ProtectedType
}

type Nested {
  name: String!
  protected: String!
}

type ProtectedType {
  name: String!
  nested: String!
}

type Query {
  nested: Nested!
  protectedScalar: String!
  protectedType: ProtectedType
  scalar: String!
}

schema {
  query: Query
  mutation: Mutation
}
