tests/core/snapshots/auth-jwt.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type Mutation {
  protectedType: ProtectedType
}

type Nested {
  name: String!
  protected: String!
}

scalar PhoneNumber

type ProtectedType {
  name: String!
  nested: String!
}

type Query {
  nested: Nested!
  protectedScalar: String!
  protectedType: ProtectedType
  scalar: String!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
  mutation: Mutation
}
