tests/core/snapshots/auth-multiple-complex.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
union Animal = Bird | Cat | Dog

type Bird {
  tweet: String
}

type Cat {
  meow: String
}

type Dog {
  bark: String
}

type Query {
  animals: [Animal!]!
}

schema {
  query: Query
}
