tests/core/snapshots/batching.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(batchRequests: true) @upstream {
  query: Query
}

type Query {
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  id: Int
  name: String
}
