tests/core/snapshots/body-batching-cases.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000) @upstream(batch: {delay: 1, headers: []}, httpCache: 42) {
  query: Query
}

type Bar {
  a: Int
  b: Int
}

type Foo {
  a: Int
  b: Int
  bar: Bar
    @http(
      url: "http://jsonplaceholder.typicode.com/bar"
      body: "{\"id\": \"{{.value.a}}\"}"
      batchKey: ["a"]
      bodyKey: ["id"]
      method: "POST"
    )
  tar: Tar
    @http(
      url: "http://jsonplaceholder.typicode.com/tar"
      body: "{{.value.b}}"
      batchKey: ["id"]
      bodyKey: [""]
      method: "POST"
    )
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User
    @http(
      url: "http://jsonplaceholder.typicode.com/users"
      body: "{\"key\": \"id\", \"value\": \"{{.value.userId}}\"}"
      batchKey: ["id"]
      bodyKey: ["value"]
      method: "POST"
    )
  userId: Int!
}

type Query {
  foo: [Foo] @http(url: "http://jsonplaceholder.typicode.com/foo")
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type Tar {
  a: Int
}

type User {
  email: String!
  id: Int!
  name: String!
  post: Post
    @http(
      url: "http://jsonplaceholder.typicode.com/posts"
      body: "{\"userId\": \"{{.value.id}}\", \"title\": \"{{.value.name}}\", \"body\": \"{{.value.email}}\"}"
      batchKey: ["userId"]
      bodyKey: ["userId"]
      method: "POST"
    )
}
