tests/core/snapshots/cache-control.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(headers: {cacheControl: true}) @upstream {
  query: Query
}

type Query {
  user(id: Int): User
    @http(url: "http://jsonplaceholder.typicode.com/users", query: [{key: "id", value: "{{.args.id}}"}])
}

type User {
  id: Int
  name: String
}
